--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "us-states",
+  "name": "mx-states",
   "version": "0.0.1",
-  "description": "mappings from USPS code to US state name",
+  "description": "mappings for Mexican States",
   "repository": {
     "type": "git",
-    "url": "https://github.com/michaelficarra/us-states.git"
+    "url": "https://github.com/Nushio/mx-states.git"
   },
-  "keywords": ["US", "states", "state", "USPS", "postal", "code", "mapping"],
-  "author": "Michael Ficarra",
+  "keywords": ["MX", "states", "state", "list", "mapping"],
+  "author": "Michael Ficarra, Juan Rodriguez",
   "license": "BSD-3-Clause",
   "bugs": {
-    "url": "https://github.com/michaelficarra/us-states/issues"
+    "url": "https://github.com/Nushio/mx-states/issues"
   }
 }
